Fixes google font weights
- Also fixes misaligned image

--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -150,18 +150,19 @@ li {
 }
 h1 {
   color: $green;
+  font-weight: 300;
   font-size: 3rem;
   .text-label + & {
     margin-top: 0.5rem;
   }
 }
 h2 {
-  font-weight: normal;
+  font-weight: 300;
   font-size: 2.5rem;
   margin-top: 4rem;
 }
 h3 {
-  font-weight: normal;
+  font-weight: 300;
   font-size: 2rem;
   color: $green;
   margin: 2rem 0;
